# simulation-model-matching

./: .gitignore  CMakeLists.txt  FeatureExtractor.pro  FeatureModelCreator.pro  FeatureSetCreator.pro  FeatureSimulationCommon.pro  FeatureSimulationCommonTests.pro  README.md  SimulationGame.pro  noiseextractor.pro  noisesimulation.pro  simulation-model-matching.pro
apps/: simulation-model-matching.cpp
backup/cmake.Modules/: CompileFlags.cmake
backup/include/: SimulationModelMatching.h
backup/src/: Correspondence.cpp  FeatureExtractor.h  Historizer.cpp  LineDetector.cpp  LineDetector.h  Noise.cpp  Noise.h  ORBMatcher.h
backup/testsuites/NoiseTest/: Test.cpp  filename.noise  makefile  result.txt
backup/testsuites/RecordedSequenceTest/: filename.rs
cmake.Modules/: CompileFlags.cmake
include/: SimulationModelMatching.h
include/Data/: Correlation  FeatureModel  area.h  coordinates.h  correlation.h  feature.h  featuremodel.h  featureset.h  frame.h  position.h  region.h  simulation.h
include/Data/Management/: correlationdao.h
include/DataManagement/: area.h  coordinates.h
include/FeatureSimulation/Common/: makeunique.h  utils.h
include/FeatureSimulation/FeatureSetCreation/: FeatureDetector  FeatureDetectorORB  FeatureDetectorShiTomasi  FeatureSetCreator  LaneDetector  RecordingPlayer  SettingsValidator  featuredetector.h  featuredetectororb.h  featuredetectorshitomasi.h  featuresetcreator.h  guicontroler.h  imagemasker.h  lanedetector.h  lanemarkingfilter.h  recordingplayer.h  settings.h  settingsreader.h  settingsvalidator.h
include/FeatureSimulation/SimulationGame/: abstractautopilot.h  abstractparticipant.h  autopilotregistry.h  datagatherer.h  gamerunner.h  gamestarter.h  odvcontrol.h  participantregistry.h  settings.h  settingsreader.h
include/FeatureSimulationCommon/: MakeUnique  makeunique.h  utils.h
include/FeatureSimulationCommon/Data/: area.h  coordinates.h  correlation.h  feature.h  featuremodel.h  featureset.h  frame.h  position.h  region.h  simulation.h
include/FeatureSimulationCommon/DataManagement/: CorrelationDAO  FeatureModelDAO  FeatureSetDAO  RoniDAO  TableField  correlationdao.h  cursor.h  database.h  featuremodeldao.h  featuresetdao.h  ronidao.h  tablefield.h
include/NoiseSimulation/: DataAccessObject  DataContracts  DataSource  FrameCorrelation  Loadable  Recording  SQLiteDataSource  Savable  area.h  datacontracts.h  frame.h  framecorrelation.h  loadable.h  noise.h  recording.h  savable.h  sequence.h  sqlitedatasource.h
include/SimulationGame/: GameStarter  gamestarter.h
lanefollower/: CMakeLists.txt  start.sh
lanefollower/include/: LaneFollower.h
lanefollower/src/: LaneFollower.cpp  cursor.cpp  cursor.h  dataaccessobject.cpp  dataaccessobject.h  database.cpp  database.h  measurements.cpp  measurements.h  measurementsdao.cpp  measurementsdao.h  measurementtaker.cpp  measurementtaker.h  tablecolumn.cpp  tablecolumn.h  tablefield.cpp  tablefield.h
resources/: .gitignore  SEM_Test_Track-overtaking.cor  averages.sql  configuration  data.sqlite  straightroad.roni  track.scnx
src/: Correspondence.cpp  Correspondence.h  FeatureExtractor.cpp  FeatureExtractor.h  Historizer.cpp  Historizer.h  LineDetector.cpp  Noise.cpp  Noise.h  ORBMatcher.cpp  RecordedSequence.cpp  RecordedSequence.h  ShiTomasiMatcher.cpp  ShiTomasiMatcher.h  SimulationModelMatching.cpp  area.cpp  area.h  dataaccessobject.cpp  dataaccessobject.h  datacontracts.cpp  datacontracts.h  datasource.cpp  datasource.h  filedatasource.cpp  filedatasource.h  frame.cpp  frame.h  framecorrelation.cpp  framecorrelation.h  framecorrelationdao.cpp  framecorrelationdao.h  loadable.cpp  loadable.h  main.cpp  main_featuremodelcreator.cpp  main_featuresetcreator.cpp  main_simulationgame.cpp  noise.cpp  noise.h  noisedao.cpp  (+13 more)
src/DataManagement/: coordinates.h  feature.cpp  feature.h  position.cpp  position.h
src/common/: makeunique.h  settings.cpp  settings.h  utils.cpp  utils.h
src/common/data/: coordinates.cpp  coordinates.h  correlation.cpp  correlation.h  dirtyframe.cpp  dirtyframe.h  feature.cpp  feature.h  featuremodel.cpp  featuremodel.h  featureset.cpp  featureset.h  frame.cpp  frame.h  measurements.cpp  measurements.h  permutation.cpp  permutation.h  position.cpp  position.h  recordingsection.cpp  recordingsection.h  rectangle.cpp  rectangle.h  region.cpp  region.h  simulation.cpp  simulation.h  simulationdata.cpp  simulationdata.h  simulationframedata.cpp  simulationframedata.h
src/common/datamanagement/: correlationdao.cpp  correlationdao.h  (+20 more)
src/data/: coordinates.cpp  coordinates.h  correlation.cpp  correlation.h  feature.cpp  feature.h  featuremodel.cpp  featuremodel.h  featureset.cpp  featureset.h  frame.cpp  frame.h  position.cpp  position.h  region.cpp  region.h  simulation.cpp  simulation.h
src/featuresetcreation/: featuredetector.cpp  featuredetector.h  featuredetectororb.cpp  featuredetectororb.h  featuredetectorshitomasi.cpp  featuredetectorshitomasi.h  featuredetectorshittomasi.cpp  featuresetcreator.cpp  featuresetcreator.h  featuresettingsreader.cpp  featuresettingsreader.h  guicontroler.cpp  guicontroler.h  guicontroller.h  imagemasker.cpp  imagemasker.h  lanedetector.cpp  lanedetector.h  lanemarkingfilter.cpp  lanemarkingfilter.h  recordingplayer.cpp  recordingplayer.h  ronimasker.cpp  ronimasker.h  settings.cpp  settings.h  settingsvalidator.cpp  settingsvalidator.h
src/simulationgame/: abstractautopilot.cpp  abstractautopilot.h  abstractparticipant.cpp  abstractparticipant.h  autopilotregistry.cpp  autopilotregistry.h  datagatherer.cpp  datagatherer.h  gamerunner.cpp  gamerunner.h  gamestarter.cpp  gamestarter.h  measurementtaker.cpp  measurementtaker.h  odvcontrol.cpp  odvcontrol.h  participantregistry.cpp  participantregistry.h  settings.cpp  settings.h  simsettingsreader.cpp  simsettingsreader.h
test/CorrespondenceTest/: Test.cpp  makefile
test/SerializationTest/: Test.cpp  makefile
testsuites/: SimulationTestSuite.h
testsuites/NoiseTest/: Test.cpp  filename.noise  test
testsuites/RecordedSequenceTest/: Test.cpp  makefile  test
(+65 files in other folders)
